feat: add locale lang

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
 <div class="img__container">
   <header class="header">
     <div class="header__controls">
-      <button class="header__img btn btn__reload">reload</button>
+      <button class="header__img btn btn__reload locale-button-reload">Refresh img</button>
       <div class="select__container">
         <select name="" id="" class="header__lang lang">
-          <option value="en" class="lang__opt">en</option>
-          <option value="ru" class="lang__opt">ru</option>
-          <option value="be" class="lang__opt">be</option>
+          <option value="en" class="lang__opt locale-select-en">Eng</option>
+          <option value="ru" class="lang__opt locale-select-ru">Rus</option>
+          <option value="be" class="lang__opt locale-select-be">Bel</option>
         </select>
       </div>
       <div class="header__temp temp">
@@ -30,8 +30,8 @@
       </div>
     </div>
     <form action="" class="header__search search__form">
-      <input type="text" class="search__input" placeholder="Search for..." autocomplete="off" autofocus>
-      <button type="submit" class="search__btn btn">Search</button>
+      <input type="text" class="search__input" placeholder="..." autocomplete="off" autofocus>
+      <button type="submit" class="search__btn btn locale-button-search">Search</button>
     </form>
   </header>
   <main class="main">
