refactor: add separate request weather

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
     </form>
   </header>
   <main class="main">
+    <p class="forecast__notification"></p>
     <section class="forecast"></section>
     <section class="map-container" id="map-container-id">
       <div class="map-canvas" id='map-id'></div>
